// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r0:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button2"
        id="headlessui-disclosure-button-:r2:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <span
          class="text text--tag tag tag--emphasis-high tag--status-informational"
        >
          <span
            class="tag__body"
          >
            Tag Text
          </span>
        </span>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state="open"
      data-open=""
    >
      <button
        aria-controls="headlessui-disclosure-panel-:r5:"
        aria-expanded="true"
        class="accordion-button accordion-button--md"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-button3"
        id="headlessui-disclosure-button-:r4:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon accordion-button__trailing-icon--open"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            hide content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
      <div
        class="accordion-panel"
        data-headlessui-state="open"
        data-open=""
        data-testid="accordion-panel3"
        id="headlessui-disclosure-panel-:r5:"
      >
        <span
          class="text text--body-md"
        >
          <p
            class="text text--body-md"
          >
            Lorem ipsum dolor sit amet consectetur. Massa lacus id dictum id pharetra et semper cras. Ante aliquam nec urna amet. Ipsum viverra pharetra libero sit nam adipiscing quam erat. Ultricies lacinia malesuada ac eget convallis convallis semper purus purus.
          </p>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> HasLeadingIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:re:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            height="24px"
            style="--icon-size: 24px;"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.19625 17.4845C7.04625 16.873 7.94817 16.3894 8.902 16.0337C9.85583 15.6779 10.8885 15.5 12 15.5C13.1115 15.5 14.1442 15.6779 15.098 16.0337C16.0518 16.3894 16.9538 16.873 17.8038 17.4845C18.4641 16.8012 18.9952 15.9942 19.397 15.0635C19.799 14.1327 20 13.1115 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.1115 4.201 14.1327 4.603 15.0635C5.00483 15.9942 5.53592 16.8012 6.19625 17.4845ZM12.0005 12.5C11.1578 12.5 10.4471 12.2108 9.86825 11.6323C9.28942 11.0538 9 10.3432 9 9.5005C9 8.65783 9.28925 7.94708 9.86775 7.36825C10.4462 6.78942 11.1568 6.5 11.9995 6.5C12.8422 6.5 13.5529 6.78925 14.1318 7.36775C14.7106 7.94625 15 8.65683 15 9.4995C15 10.3422 14.7107 11.0529 14.1322 11.6317C13.5537 12.2106 12.8432 12.5 12.0005 12.5ZM12 21C10.7448 21 9.56983 20.7663 8.475 20.299C7.38017 19.8317 6.42758 19.1929 5.61725 18.3828C4.80708 17.5724 4.16833 16.6198 3.701 15.525C3.23367 14.4302 3 13.2552 3 12C3 10.7448 3.23367 9.56983 3.701 8.475C4.16833 7.38017 4.80708 6.42758 5.61725 5.61725C6.42758 4.80708 7.38017 4.16833 8.475 3.701C9.56983 3.23367 10.7448 3 12 3C13.2552 3 14.4302 3.23367 15.525 3.701C16.6198 4.16833 17.5724 4.80708 18.3828 5.61725C19.1929 6.42758 19.8317 7.38017 20.299 8.475C20.7663 9.56983 21 10.7448 21 12C21 13.2552 20.7663 14.4302 20.299 15.525C19.8317 16.6198 19.1929 17.5724 18.3828 18.3828C17.5724 19.1929 16.6198 19.8317 15.525 20.299C14.4302 20.7663 13.2552 21 12 21ZM12 20C12.9218 20 13.8289 19.8388 14.7212 19.5163C15.6134 19.1939 16.3845 18.7526 17.0345 18.1923C16.3845 17.6704 15.6326 17.2579 14.7788 16.9548C13.9249 16.6516 12.9987 16.5 12 16.5C11.0013 16.5 10.0718 16.6484 9.2115 16.9453C8.35133 17.2421 7.60267 17.6578 6.9655 18.1923C7.6155 18.7526 8.38658 19.1939 9.27875 19.5163C10.1711 19.8388 11.0782 20 12 20ZM12 11.5C12.5615 11.5 13.0352 11.3071 13.4212 10.9212C13.8071 10.5352 14 10.0615 14 9.5C14 8.9385 13.8071 8.46475 13.4212 8.07875C13.0352 7.69292 12.5615 7.5 12 7.5C11.4385 7.5 10.9647 7.69292 10.5787 8.07875C10.1929 8.46475 10 8.9385 10 9.5C10 10.0615 10.1929 10.5352 10.5787 10.9212C10.9647 11.3071 11.4385 11.5 12 11.5Z"
            />
          </svg>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
          <span
            class="text text--body-md accordion-button__subTitle"
          >
            Quam lacus maecenas nibh malesuada.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> TitleAndSubtitle story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:rc:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Massa quam egestas massa.
          </span>
          <span
            class="text text--body-md accordion-button__subTitle"
          >
            <span>
              "Quam lacus maecenas nibh malesuada."
            </span>
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> UsingRenderProp story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:rg:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion Button 
            closed
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> WithLargeHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        id="headlessui-disclosure-button-:ri:"
        type="button"
      >
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa. Massa quam egestas massa.
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> WithLeadingNumberIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="w-[600px]"
  >
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r6:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <span
            aria-label="Numero uno"
            class="text text--label-md number-icon number-icon--size-md number-icon--status-default"
            role="img"
            tabindex="-1"
          >
            1
          </span>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:r8:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <span
            aria-label="Numero uno"
            class="text text--label-md number-icon number-icon--size-md number-icon--status-default"
            role="img"
            tabindex="-1"
          >
            1
          </span>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="accordion-row"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        class="accordion-button accordion-button--md"
        data-headlessui-state=""
        data-testid="accordion-button"
        id="headlessui-disclosure-button-:ra:"
        type="button"
      >
        <span
          class="accordion-button__leading-icon"
        >
          <span
            aria-label="Numero uno"
            class="text text--label-md number-icon number-icon--size-md number-icon--status-default"
            role="img"
            tabindex="-1"
          >
            1
          </span>
        </span>
        <h2
          class="text text--title-md accordion-button__heading"
        >
          <span
            class="text text--title-md accordion-button__title"
          >
            Accordion title
          </span>
        </h2>
        <svg
          class="icon accordion-button__trailing-icon"
          fill="currentColor"
          height="24px"
          role="img"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            show content
          </title>
          <path
            d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
